Deploy-k8s-kubeadm-terraform-Ansible/terraform/vpc.tf
provider "aws" {
    region = "us-east-1"  
}
# vpc.tf

resource "aws_vpc" "main" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "k8s-vpc"
  }
}

#=============== Public Subnet configuretion ==================

resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "k8s-igw"
  }
}

resource "aws_subnet" "public" {
  vpc_id                  = aws_vpc.main.id
  cidr_block              = var.public_subnet_cidr
  availability_zone       = var.availability_zone
  map_public_ip_on_launch = true

  tags = {
    Name = "k8s-public-subnet"
  }
}
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.gw.id
  }

  tags = {
    Name = "k8s-public-route-table"
  }
}

resource "aws_route_table_association" "public" {
  subnet_id      = aws_subnet.public.id
  route_table_id = aws_route_table.public.id
}

#=============== Private Subnet configuretion ==================
# Elastic IP for NAT Gateway
#resource "aws_eip" "nat_eip" {
#  domain = "vpc"
#}

# NAT Gateway
#resource "aws_nat_gateway" "nat" {
#  allocation_id = aws_eip.nat_eip.id
#  subnet_id     = aws_subnet.public.id
#}

#resource "aws_subnet" "private" {
#  vpc_id            = aws_vpc.main.id
#  cidr_block        = var.private_subnet_cidr
#  availability_zone = var.availability_zone

#  tags = {
#    Name = "k8s-private-subnet"
#  }
#}

# Private Route Table
#resource "aws_route_table" "private_route_table" {
#  vpc_id = aws_vpc.main.id

#  route {
#    cidr_block     = "0.0.0.0/0"
#    nat_gateway_id = aws_nat_gateway.nat.id
#  }
#}

#resource "aws_route_table_association" "private_subnet_association" {
#  subnet_id      = aws_subnet.private.id
#  route_table_id = aws_route_table.private_route_table.id
#}
